CleanCode replacement collect with toList